
2012-05-08 Vinnie Falco <vinnie.falco@gmail.com>

  * Move function definitions into the header
  * Fix bug with scope() construction with a name.
  * Merge all the source files into the same directory.

2012-05-07 Vinnie Falco <vinnie.falco@gmail.com>

  * Check shared_ptr assignments to the same object to prevent unwanted deletes.
  * Documentation comments for shared_ptr.
  * Tidy up formatting, style, and white space

================================================================================

2012-04-09 Vinnie Falco <vinnie.falco@gmail.com>

  * Release version 0.2.1 with tag "0.2.1".

2012-04-09 Vinnie Falco <vinnie.falco@gmail.com>

  * Import original SVN repository to Git.
  * Add tags for historical releases.
  * Convert to Git style by removing the tags and trunk directories.
  * Rewrite README as README.md.
  * Add CHANGES file.
  * Convert to MIT License, with the original author's permission.
  * Take over maintenance of LuaBridge

2007-11-28 Nathan Reed <nathaniel.reed@gmail.com>

  * Fix various bugs (see commit log).
  * Add various enhancements (see commit log).

================================================================================

2007-07-28 Nathan Reed <nathaniel.reed@gmail.com>

  * Release version 0.2 with tag "0.2".

================================================================================

2007-03-01 Nathan Reed <nathaniel.reed@gmail.com>

  * Release version 0.1 with tag "0.1".